프로젝트 구조 완전 정리 및 패키징
 주요 변경사항:
-  src/everytime_crawler/ 패키지 구조로 전환
-  examples/, tests/, debug/, docs/, data/ 폴더별 파일 분류
-  상세한 문서화 (README, usage.md, development.md)
-  현대적 Python 패키징 (pyproject.toml) 추가
-  개선된 .gitignore 및 환경설정
-  디버깅 도구 및 분석 스크립트 정리

 기술적 개선:
- 최신 에브리타임 HTML 구조에 맞춘 시간표 파싱 로직
- 과목명, 교수명, 강의실, 시간 정보 정확 추출
- CSV 저장 및 데이터 검증 기능
- 체계적인 에러 처리 및 로깅

 문서화:
- 설치부터 사용법까지 완전한 가이드
- API 레퍼런스 및 예제 코드
- 개발환경 설정 및 기여 가이드
- 문제해결 섹션 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,23 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
-*.py[codz]
+*.py[cod]
 *$py.class
 
 # C extensions
 *.so
+
+# Environment variables
+.env
+
+# Debug files
+debug/*.html
+debug/*.png
+debug/*.csv
+
+# Data files (keep structure but ignore actual data)
+data/*.csv
+data/*.json
+data/*.xlsx
 
 # Distribution / packaging
 .Python
