Complete 2025 July free board crawler implementation
- Enhanced crawler.py with robust ChromeDriver setup
- Added comprehensive board crawling functionality with detailed comment extraction
- Implemented 2025 July free board mass crawling script (crawl_july_2025_free_board.py)
- Added multiple example scripts for different crawling scenarios
- Improved error handling and WebDriver compatibility
- Added data analysis and GUI examples
- Created comprehensive test scripts and debugging tools
- Successfully collected July 2025 free board posts with comments in CSV/JSON format

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,15 @@ python-dotenv==1.0.0
 lxml==4.9.3
 webdriver-manager==4.0.1
 schedule==1.2.0
+
+# 대량 데이터 분석용 추가 패키지
+matplotlib==3.8.2
+seaborn==0.13.0
+numpy==1.25.2
+
+# 데이터 처리 성능 향상
+openpyxl==3.1.2
+xlsxwriter==3.1.9
+
+# 진행률 표시
+tqdm==4.66.1
